2007-06-17: Added support for user-defined scalar functions.

            Thanks to Enrico Tassi <gareuselesinge@virgilio.it> for
            the patch!

2007-05-07: Further GC-bug fixes.  There was a design bug in the library
            that was causing all these GC issues (C-structs allocated
            in the OCaml-heap).  This obviously seemed safe (and more
            efficient) to the initial author, but after extensive checking
            it became apparent that this just does not work if C-structs
            reference each other, because the GC might move these memory
            regions.  It seems safer to allocate C-structs with "malloc",
            and use an indirection to access them.

2007-05-04: Fixed several GC-bugs, and improved thread interaction.

2007-04-23: callback_exn -> caml_callback_exn.

2007-03-30: Fixed a GC-bug.

2007-03-19: Fixed an installation problem on Cygwin.

            Thanks to James Cheney <james.cheney@gmail.com> for the hint!

2007-02-27: Small API-change: the callback for exec is now an optional
            argument.

            Added three more "exec"-functions, which do or do not take
            headers or handle NULL-values.

            Improved quality of C-code (removed warnings).

2007-02-23: Fixed a bug in the "db_close"-function.  Improved documentation.

2007-02-19: Added check for out of memory after malloc.

2007-01-31: Fixed build problem on x86_64: added -fPIC flag to compilation
            of C-stubs.

2007-01-17: Complete rewrite by Markus Mottl <markus.mottl@gmail.com>.

2005-04-??: Initial coding (0.1) by
            Christian Szegedy <csdontspam871@metamatix.org>.